# cosmic-dust

./: Cargo.toml  README.md  justfile
desktop/: io.melechtna.CosmicDust.desktop
res/: io.melechtna.CosmicDust.metainfo.xml
src/: crawler.rs  disk.rs  files.rs  main.rs  partition.rs  progress_bar.rs  sizes.rs  ui.rs
