[package]
name = "cosmic-dust"
version = "1.0.2"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", branch = "master", features = ["winit", "wgpu", "wayland"] }
iced_tiny_skia = { git = "https://github.com/pop-os/libcosmic.git", branch = "master", default-features = false, features = ["geometry", "image", "svg"] }
udev = "0.9.3"
nix = { version = "0.30.1", features = ["fs"] }
jwalk = "0.8.1"
tokio = { version = "1.44.1", features = ["rt"] }
clap = { version = "4.5.35", features = ["derive"] }
